--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda.">
-    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, psikolog profesional Medan, tes psikologi, konseling online, konseling keluarga, pengembangan karir, kesehatan mental anak, psikotes perusahaan, Regus Forum Nine Medan">
+    <meta name="description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, psikolog profesional Medan, tes psikologi, konseling online, konseling keluarga, pengembangan karir, kesehatan mental anak, psikotes perusahaan, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri">
-    <meta property="og:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda.">
+    <meta property="og:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
     <meta property="og:url" content="https://lidan-psikologi.my.id">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri">
-    <meta name="twitter:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda.">
+    <meta name="twitter:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta name="twitter:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta name="twitter:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
-    <title>Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri</title>
+    <title>Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan</title>
     <link rel="icon" href="https://lidan-psikologi.my.id/gambar/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
@@ -28,6 +28,7 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Header / Navbar -->
@@ -101,7 +102,7 @@
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg img-fade-in" src="https://lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h2 class="text-center text-lg-start mt-0">Tantangan Umum dalam Hidup</h2>
