--- a/kecerdasan-majemuk.html
+++ b/kecerdasan-majemuk.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka.">
-    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, kecerdasan majemuk anak, potensi anak, bakat anak, pola asuh, pendidikan anak, perkembangan anak, bimbingan orang tua, Regus Forum Nine Medan">
+    <meta name="description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, kecerdasan majemuk anak, potensi anak, bakat anak, pola asuh, pendidikan anak, perkembangan anak, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda">
-    <meta property="og:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka.">
+    <meta property="og:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
     <meta property="og:url" content="https://lidan-psikologi.my.id/kecerdasan-majemuk">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda">
-    <meta name="twitter:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka.">
+    <meta name="twitter:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta name="twitter:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta name="twitter:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
-    <title>Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda</title>
+    <title>Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan</title>
     <link rel="icon" href="https://lidan-psikologi.my.id/gambar/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
@@ -28,6 +28,7 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Header / Navbar -->
@@ -71,7 +72,7 @@
 
     <!-- Hero Section - Split Hero Layout with reorderable content -->
     <header class="masthead bg-primary text-white" id="page-top">
-        <div class="container-fluid h-100">
+        <div class="container-fluid h-100" style="background: linear-gradient(135deg, red, blue, gray, green, yellow); background-size: 400% 400%; animation: gradientAnimation 20s ease infinite alternate;">
             <div class="row h-100 align-items-center">
                 <!-- Left Column for Text Content on Desktop -->
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
@@ -88,7 +89,7 @@
                 </div>
                 <!-- Right Column for Image on Desktop -->
                 <div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center masthead-img-container order-lg-2 hero-image-col">
-                    <img src="https://lidan-psikologi.my.id/gambar/hero-1.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
+                    <img src="gambar/hero-kecerdasan.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
                 </div>
             </div>
         </div>
@@ -100,7 +101,7 @@
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/kecerdasan-majemuk.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h2 class="text-center text-lg-start mt-0">Tantangan dalam Mengenali Potensi Anak</h2>
@@ -120,7 +121,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 align-items-center mt-5">
                 <div class="col-lg-6">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/akibat-1.jpg" alt="[Kelompok orang mengikuti seminar]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/kecerdasan-majemuk-anak.jpg" alt="[Kelompok orang mengikuti seminar]">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="text-center text-lg-start mt-0">Dampak Jika Bakat Unik Anak Tak Dikenali</h2>
