--- a/gaya-belajar.html
+++ b/gaya-belajar.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik.">
-    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, gaya belajar anak, tes gaya belajar, orang tua, pendidikan anak, potensi akademik, kesulitan belajar, bimbingan belajar, konsultasi pendidikan, Regus Forum Nine Medan">
+    <meta name="description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, gaya belajar anak, tes gaya belajar, orang tua, pendidikan anak, potensi akademik, kesulitan belajar, bimbingan belajar, konsultasi pendidikan, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi">
-    <meta property="og:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gayapbelajar-og.png">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-belajar">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi">
-    <meta name="twitter:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik.">
+    <meta name="twitter:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta name="twitter:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta name="twitter:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
-    <title>Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi</title>
+    <title>Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan</title>
     <link rel="icon" href="https://lidan-psikologi.my.id/gambar/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -49,11 +50,11 @@
         </div>
     </nav>
 <header class="masthead bg-primary text-white" id="page-top">
-        <div class="container-fluid h-100">
+        <div class="container-fluid h-100" style="background: linear-gradient(135deg, red, blue, gray, green, yellow); background-size: 400% 400%; animation: gradientAnimation 20s ease infinite alternate;">
             <div class="row h-100 align-items-center">
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
                     <div class="hero-title-part">
-                        <h1 class="text-uppercase font-weight-bold"><strong>Khawatir Anak Sulit Belajar?</strong></h1>
+                        <h1 style="font-size: 4rem;" class="text-uppercase font-weight-bold"><strong>Khawatir Anak Sulit Belajar?</strong></h1>
                         <hr class="divider light my-4" />
                     </div>
                     <div class="hero-description-button-part mt-auto mt-lg-0">
@@ -62,7 +63,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center masthead-img-container order-lg-2 hero-image-col">
-                    <img src="https://lidan-psikologi.my.id/gambar/hero-1.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
+                    <img src="gambar/hero-gaya-belajar.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
                 </div>
             </div>
         </div>
