--- a/gaya-pengambilan-keputusan.html
+++ b/gaya-pengambilan-keputusan.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang.">
-    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, pengambilan keputusan anak, logika anak, emosi anak, pola pikir anak, bimbingan orang tua, perkembangan kognitif, perkembangan emosional, Regus Forum Nine Medan">
+    <meta name="description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, pengambilan keputusan anak, logika anak, emosi anak, pola pikir anak, bimbingan orang tua, perkembangan kognitif, perkembangan emosional, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda">
-    <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang.">
+    <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-pengambilan-keputusan">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda">
-    <meta name="twitter:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang.">
+    <meta name="twitter:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta name="twitter:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta name="twitter:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
-    <title>Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda</title>
+    <title>Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan</title>
     <link rel="icon" href="https://lidan-psikologi.my.id/gambar/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
@@ -28,6 +28,7 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Header / Navbar -->
@@ -71,7 +72,7 @@
 
     <!-- Hero Section - Split Hero Layout with reorderable content -->
     <header class="masthead bg-primary text-white" id="page-top">
-        <div class="container-fluid h-100">
+        <div class="container-fluid h-100" style="background: linear-gradient(135deg, red, blue, gray, green, yellow); background-size: 400% 400%; animation: gradientAnimation 20s ease infinite alternate;">
             <div class="row h-100 align-items-center">
                 <!-- Left Column for Text Content on Desktop -->
                 <div class="col-lg-6 d-flex flex-column align-items-center justify-content-center text-center text-lg-start p-5 order-lg-1 hero-left-content">
@@ -88,7 +89,7 @@
                 </div>
                 <!-- Right Column for Image on Desktop -->
                 <div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center masthead-img-container order-lg-2 hero-image-col">
-                    <img src="https://lidan-psikologi.my.id/gambar/hero-1.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
+                    <img src="gambar/hero-keputusan.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
                 </div>
             </div>
         </div>
