--- a/temperamen-anak.html
+++ b/temperamen-anak.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka.">
-    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, karakter anak, temperamen anak, pola asuh, perkembangan anak, emosi anak, sosial anak, tantrum, komunikasi anak, bimbingan orang tua, Regus Forum Nine Medan">
+    <meta name="description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
+    <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, karakter anak, temperamen anak, pola asuh, perkembangan anak, emosi anak, sosial anak, tantrum, komunikasi anak, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik">
-    <meta property="og:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka.">
+    <meta property="og:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
     <meta property="og:url" content="https://lidan-psikologi.my.id/temperamen-anak">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik">
-    <meta name="twitter:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka.">
+    <meta name="twitter:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta name="twitter:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda: bagaimana mereka tampil di luar, siapa mereka sesungguhnya, dan bagaimana Anda melihat mereka. Pahami lebih dalam untuk pola asuh yang harmonis. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta name="twitter:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
-    <title>Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik</title>
+    <title>Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan</title>
     <link rel="icon" href="https://lidan-psikologi.my.id/gambar/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
@@ -28,6 +28,7 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <!-- Header / Navbar -->
@@ -88,7 +89,7 @@
                 </div>
                 <!-- Right Column for Image on Desktop -->
                 <div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center masthead-img-container order-lg-2 hero-image-col">
-                    <img src="https://lidan-psikologi.my.id/gambar/hero-1.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
+                    <img src="gambar/hero-temperamen.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
                 </div>
             </div>
         </div>
@@ -100,7 +101,7 @@
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/permasalahan-2.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/temperamen-anak.jpg" alt="[Seseorang sedang mengikuti tes psikologi]">
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <h2 class="text-center text-lg-start mt-0">Tantangan dalam Memahami Anak</h2>
@@ -117,7 +118,7 @@
             </div>
             <div class="row gx-4 gx-lg-5 align-items-center mt-5">
                 <div class="col-lg-6">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="https://lidan-psikologi.my.id/gambar/akibat-1.jpg" alt="[Kelompok orang mengikuti seminar]">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 shadow-lg" src="gambar/temperamen-anak-deteksi.jpg" alt="[Kelompok orang mengikuti seminar]">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="text-center text-lg-start mt-0">Dampak Jika Karakter Anak Tak Dikenali</h2>
