--- a/gaya-hidup.html
+++ b/gaya-hidup.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Hidup Anak Anda: Spontan atau Terencana? | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung spontan dan fleksibel, atau terencana dan terstruktur. Dukung gaya hidup unik mereka untuk perkembangan yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gay-hidup-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-hidup">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
