--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/index-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
