--- a/kecerdasan-majemuk.html
+++ b/kecerdasan-majemuk.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/kecerdasan-majemuk-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/kecerdasan-majemuk">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
