--- a/temperamen-anak.html
+++ b/temperamen-anak.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/temperamen-anak-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/temperamen-anak">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
