--- a/gaya-belajar.html
+++ b/gaya-belajar.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gayapbelajar-og.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gayapbelajar-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-belajar">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
