--- a/gaya-pengambilan-keputusan.html
+++ b/gaya-pengambilan-keputusan.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/pengambilan-keputusan-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-pengambilan-keputusan">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
