--- a/temperamen-anak-anda.html
+++ b/temperamen-anak-anda.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Ungkap Tiga Sisi Diri Anak untuk Pola Asuh Optimal | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Ungkap tiga sisi diri unik anak Anda: bagaimana mereka tampil di luar, siapa mereka sesungguhnya, dan bagaimana Anda melihat mereka. Pahami lebih dalam untuk pola asuh yang harmonis. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/temperamen-anak-anda-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/temperamen-anak-anda">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
