--- a/gaya-interaksi-sosial.html
+++ b/gaya-interaksi-sosial.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7YQ994R3F8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7YQ994R3F8');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lidan Psikologi - Pahami bagaimana anak Anda mengisi ulang energi sosialnya, apakah dari interaksi aktif atau waktu tenang. Dukung gaya interaksi unik mereka untuk perkembangan optimal. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
@@ -9,7 +18,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Interaksi Sosial Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami bagaimana anak Anda mengisi ulang energi sosialnya, apakah dari interaksi aktif atau waktu tenang. Dukung gaya interaksi unik mereka untuk perkembangan optimal. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
-    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/logo-psikologi.png">
+    <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/interaksi-sosial-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-interaksi-sosial">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
