--- a/kecerdasan-majemuk.html
+++ b/kecerdasan-majemuk.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7YQ994R3F8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7YQ994R3F8');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
