--- a/temperamen-anak-anda.html
+++ b/temperamen-anak-anda.html
@@ -98,7 +98,7 @@
                 </div>
                 <!-- Right Column for Image on Desktop -->
                 <div class="col-lg-6 d-none d-lg-flex align-items-center justify-content-center masthead-img-container order-lg-2 hero-image-col">
-                    <img src="gambar/hero-temperamen-anak.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
+                    <img src="gambar/karakter-unik.jpg" alt="[Seseorang sedang berkonsultasi dengan psikolog]" class="img-fluid rounded shadow-lg animate-float img-fade-in" data-float="true">
                 </div>
             </div>
         </div>
