--- a/gaya-belajar.html
+++ b/gaya-belajar.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, gaya belajar anak, tes gaya belajar, orang tua, pendidikan anak, potensi akademik, kesulitan belajar, bimbingan belajar, konsultasi pendidikan, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Kesulitan Dalam Belajar? - Temukan Gaya Belajar Anak untuk Raih Prestasi | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Temukan gaya belajar anak Anda untuk optimalkan potensi akademik. Layanan tes gaya belajar, minat, dan konsultasi bagi orang tua. Bantu anak meraih prestasi terbaik. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gayapbelajar-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-belajar">
