--- a/gaya-hidup.html
+++ b/gaya-hidup.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, gaya hidup anak, anak spontan, anak terencana, pola asuh, perkembangan anak, bimbingan orang tua, adaptasi anak, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Hidup Anak Anda: Spontan atau Terencana? | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak anda merasa cemas atau frustrasi? - Pahami Gaya Hidup Anak Anda: Spontan atau Terencana? | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung spontan dan fleksibel, atau terencana dan terstruktur. Dukung gaya hidup unik mereka untuk perkembangan yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/gay-hidup-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-hidup">
