--- a/gaya-interaksi-sosial.html
+++ b/gaya-interaksi-sosial.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, energi sosial anak, gaya interaksi anak, pola asuh, perkembangan sosial anak, anak pendiam, anak aktif, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Interaksi Sosial Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Sulit Memulai Percakapan atau Bergaul? - Pahami Gaya Interaksi Sosial Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami bagaimana anak Anda mengisi ulang energi sosialnya, apakah dari interaksi aktif atau waktu tenang. Dukung gaya interaksi unik mereka untuk perkembangan optimal. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/interaksi-sosial-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-interaksi-sosial">
