--- a/gaya-pengambilan-keputusan.html
+++ b/gaya-pengambilan-keputusan.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, pengambilan keputusan anak, logika anak, emosi anak, pola pikir anak, bimbingan orang tua, perkembangan kognitif, perkembangan emosional, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Sulit Bersosialisasi? - Pahami Gaya Pengambilan Keputusan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami apakah anak Anda cenderung membuat keputusan berdasarkan logika atau perasaan. Dukung cara berpikir unik mereka untuk perkembangan emosional dan rasional yang seimbang. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/pengambilan-keputusan-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/gaya-pengambilan-keputusan">
