--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, psikolog profesional Medan, tes psikologi, konseling online, konseling keluarga, pengembangan karir, kesehatan mental anak, psikotes perusahaan, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anda Sering Merasa Kecemasan & Depresi? - Solusi Kesejahteraan Mental & Pengembangan Diri | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pusat layanan psikologi profesional di Medan. Menawarkan tes bakat, minat, psikotes rekrutmen, serta konseling untuk individu, keluarga, dan organisasi. Temukan potensi dan raih kesejahteraan mental Anda. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/index-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id">
