--- a/kecerdasan-majemuk.html
+++ b/kecerdasan-majemuk.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, kecerdasan majemuk anak, potensi anak, bakat anak, pola asuh, pendidikan anak, perkembangan anak, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Sulit Bergaul atau Memahami Orang Lain? - Temukan Beragam Kecerdasan Unik Anak Anda | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Temukan beragam kecerdasan unik anak Anda: kemampuan berbahasa, logika, visual, gerak, musik, interaksi sosial, pemahaman diri, dan alam. Optimalkan potensi mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/kecerdasan-majemuk-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/kecerdasan-majemuk">
