--- a/temperamen-anak.html
+++ b/temperamen-anak.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, karakter anak, temperamen anak, pola asuh, perkembangan anak, emosi anak, sosial anak, tantrum, komunikasi anak, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Lidan Psikologi - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Cepat Marah atau Emosional? - Pahami Karakter Unik Anak untuk Pola Asuh Terbaik | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Pahami karakter bawaan unik anak Anda untuk pola asuh yang lebih efektif. Temukan cara terbaik mendukung perkembangan emosi dan sosial mereka. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/temperamen-anak-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/temperamen-anak">
