--- a/temperamen-anak-anda.html
+++ b/temperamen-anak-anda.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Lidan Psikologi, PT Lidan Indah Abadi, sisi diri anak, kepribadian anak, pola asuh, pemahaman anak, perilaku anak, esensi diri anak, persepsi orang tua, bimbingan orang tua, Regus Forum Nine Medan, tes minat bakat gratis, konseling psikolog gratis, konseling psikolog Medan">
     <meta name="author" content="Lidan Psikologi">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Andak Anda Sulit Mengungkap Perasaan? - Ungkap Tiga Sisi Diri Anak untuk Pola Asuh Optimal | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
+    <meta property="og:title" content="Anak Anda Sulit Mengungkap Perasaan? - Ungkap Tiga Sisi Diri Anak untuk Pola Asuh Optimal | Tes Minat Bakat & Konseling Psikolog Gratis di Medan">
     <meta property="og:description" content="Lidan Psikologi - Ungkap tiga sisi diri unik anak Anda: bagaimana mereka tampil di luar, siapa mereka sesungguhnya, dan bagaimana Anda melihat mereka. Pahami lebih dalam untuk pola asuh yang harmonis. Dapatkan juga tes minat bakat gratis dan konseling psikolog gratis di Medan.">
     <meta property="og:image" content="https://lidan-psikologi.my.id/gambar/temperamen-anak-anda-og.jpg">
     <meta property="og:url" content="https://lidan-psikologi.my.id/temperamen-anak-anda">
